# GlassBox-Engine

./: .gitignore  CHAT_HISTORY.md  CONTRIBUTING.md  Comparative Analysis of Advanced Search and Lead Intelligence Systems.md  DESIGN.md  Freelancer Client Discovery Engine Design.md  LICENSE  PIPELINE.md  README.md  RESTORED_RESOURCES.md  SESSION_LOG_2026_01_29.md  TRUST_MODEL.md  implementation_plan.md.resolved  pyproject.toml  setup.py
Report/: case-study-glassbox-engine.docx  case-study-llm-evaluation-REVISED.docx  case-study-llm-response-evaluation.docx
glassbox/: __init__.py  domain.py  evidence.py  validation.py
glassbox/cli/: __init__.py  __main__.py  main.py  pipeline.py
glassbox/enrichment/: __init__.py  waterfall.py
glassbox/ingestion/: __init__.py  rss.py
glassbox/ranking/: __init__.py  components.py  scorer.py
glassbox/resolution/: __init__.py  entity_resolver.py
tests/: test_phase0.py  test_phase1_ingestion.py  test_phase2_resolution.py  test_phase3_enrichment.py  test_phase4_ranking.py  test_phase5a_cli.py
